--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "express": "^4.21.2"
+    "dotenv": "^17.2.1",
+    "express": "^4.21.2",
+    "mongodb": "^2.2.12",
+    "mongoose": "^8.17.0"
   }
 }
