--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "dotenv": "^17.2.1",
     "express": "^4.21.2",
     "mongodb": "^2.2.12",
-    "mongoose": "^8.17.0"
+    "mongoose": "^8.17.0",
+    "google-auth-library": "^9.0.0"
   }
 }
