--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "dotenv": "^17.2.1",
     "express": "^4.21.2",
     "mongodb": "^2.2.12",
-    "mongoose": "^8.17.0"
+    "mongoose": "^8.17.0",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
+    "express-session": "^1.17.3"
   }
 }
